[gd_scene load_steps=40 format=3 uid="uid://b6b86gpw8bfpk"]

[ext_resource type="Theme" uid="uid://bfw6ylcttychc" path="res://Themes/Themes/AverageButton.tres" id="1_av0ds"]
[ext_resource type="Script" uid="uid://djgnpgbny56rv" path="res://Code/Scenes/UI/Cards/TrainerCard.gd" id="1_lminl"]
[ext_resource type="Resource" uid="uid://ybub8qpf0t81" path="res://Resources/Cards/5 ex Hidden Lagends/HL87AncientTomb.tres" id="2_oitn0"]
[ext_resource type="StyleBox" uid="uid://bvesf3hjv2bsl" path="res://Themes/StyleBoxes/GBADragBox.tres" id="3_7n7u5"]
[ext_resource type="Texture2D" uid="uid://b4uymubvo04qp" path="res://Art/Cards/4 ex Team Magma vs Team Aqua/37.jpg" id="3_ociyq"]
[ext_resource type="PackedScene" uid="uid://dmhjt2wuanymf" path="res://Scenes/UI/UIComponents/minimize_button.tscn" id="3_pxlap"]
[ext_resource type="Texture2D" uid="uid://ciyynt0iw46k5" path="res://Art/Rarities/31px-Rarity_Common.png" id="5_yaayd"]
[ext_resource type="Texture2D" uid="uid://blfwsqqtrqe8v" path="res://Art/Rarities/31px-Rarity_Uncommon.png" id="6_f4r3p"]
[ext_resource type="Texture2D" uid="uid://bir0keyl58pst" path="res://Art/Rarities/31px-Rarity_Rare.png" id="7_qik87"]
[ext_resource type="Texture2D" uid="uid://be2sag665selj" path="res://Art/Rarities/Rarity_Rare_Holo.png" id="8_u12sb"]
[ext_resource type="Texture2D" uid="uid://dldh83yhhvvs2" path="res://Art/Rarities/Rarity_Rare_Holo_ex.png" id="9_vn6na"]
[ext_resource type="Texture2D" uid="uid://dfh4btp104a45" path="res://Art/Rarities/Rarity_Rare_Secret.png" id="10_jpopr"]
[ext_resource type="Texture2D" uid="uid://cnsmaebpgm086" path="res://Art/Rarities/Rarity_Ultra-Rare_Rare.png" id="11_e61x5"]
[ext_resource type="Texture2D" uid="uid://dx7wnthhhm80w" path="res://Art/Rarities/30px-SetSymbolPromo.png" id="12_piynd"]
[ext_resource type="Texture2D" uid="uid://ddc506ji0ciqq" path="res://Art/ExpansionIcons/40px-SetSymbolRuby_and_Sapphire.png" id="13_3jmdf"]
[ext_resource type="Texture2D" uid="uid://db2fvownqtey" path="res://Art/ExpansionIcons/40px-SetSymbolSandstorm.png" id="14_q8b0r"]
[ext_resource type="Texture2D" uid="uid://c2jvdeequ414n" path="res://Art/ExpansionIcons/40px-SetSymbolDragon.png" id="15_n8p0g"]
[ext_resource type="Texture2D" uid="uid://bq2t54jnbrdxo" path="res://Art/ExpansionIcons/SetSymbolTeam_Magma_vs_Team_Aqua.png" id="16_hbgt4"]
[ext_resource type="Texture2D" uid="uid://j1nc5rmbmtof" path="res://Art/ExpansionIcons/SetSymbolHidden_Legends.png" id="17_6twhk"]
[ext_resource type="Texture2D" uid="uid://b6needgmeexy4" path="res://Art/ExpansionIcons/40px-SetSymbolFireRed_and_LeafGreen.png" id="18_c1dqk"]
[ext_resource type="Texture2D" uid="uid://cysbdsdk41l70" path="res://Art/ExpansionIcons/40px-SetSymbolTeam_Rocket_Returns.png" id="19_y7gsm"]
[ext_resource type="Texture2D" uid="uid://doaf0r45tfeuk" path="res://Art/ExpansionIcons/40px-SetSymbolDeoxys.png" id="20_50o07"]
[ext_resource type="Texture2D" uid="uid://87kxw7qy5xnf" path="res://Art/ExpansionIcons/40px-SetSymbolEmerald.png" id="21_n3una"]
[ext_resource type="Texture2D" uid="uid://c7gf58mjxbggi" path="res://Art/ExpansionIcons/40px-SetSymbolUnseen_Forces.png" id="22_4npv2"]
[ext_resource type="Texture2D" uid="uid://cxp000m648ge8" path="res://Art/ExpansionIcons/40px-SetSymbolDelta_Species.png" id="23_wtdfa"]
[ext_resource type="Texture2D" uid="uid://dpblqw53nvq1t" path="res://Art/ExpansionIcons/40px-SetSymbolLegend_Maker.png" id="24_tavhl"]
[ext_resource type="Texture2D" uid="uid://by7tbpb4iejsd" path="res://Art/ExpansionIcons/40px-SetSymbolHolon_Phantoms.png" id="25_7ugkt"]
[ext_resource type="Texture2D" uid="uid://coghsgxhlxqmb" path="res://Art/ExpansionIcons/40px-SetSymbolCrystal_Guardians.png" id="26_ssk8o"]
[ext_resource type="Texture2D" uid="uid://buoaylg1cab2a" path="res://Art/ExpansionIcons/40px-SetSymbolDragon_Frontiers.png" id="27_2id1v"]
[ext_resource type="Texture2D" uid="uid://dmxe8sf6hdnnc" path="res://Art/ExpansionIcons/40px-SetSymbolPower_Keepers.png" id="28_onnp8"]
[ext_resource type="Texture2D" uid="uid://duuiqd63epsex" path="res://Art/ExpansionIcons/SetSymbolPOP_Series_1.png" id="29_rq2u4"]
[ext_resource type="Texture2D" uid="uid://edeej3yipdeo" path="res://Art/ExpansionIcons/SetSymbolPOP_Series_2.png" id="30_eqvsb"]
[ext_resource type="Texture2D" uid="uid://be1nfp0g24sdm" path="res://Art/ExpansionIcons/SetSymbolPOP_Series_3.png" id="31_4hilf"]
[ext_resource type="Texture2D" uid="uid://bfsbptu51xrnn" path="res://Art/ExpansionIcons/45px-SetSymbolPOP_Series_4.png" id="32_w7flp"]
[ext_resource type="Texture2D" uid="uid://cu8egxwxamvxw" path="res://Art/ExpansionIcons/45px-SetSymbolPOP_Series_5.png" id="33_26wna"]
[ext_resource type="PackedScene" uid="uid://cmmds4boaksl7" path="res://Scenes/UI/UIComponents/movable.tscn" id="35_7n7u5"]
[ext_resource type="PackedScene" uid="uid://c5d081uywglg" path="res://Scenes/UI/UIComponents/close_button.tscn" id="35_wu3ls"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wt4wi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x7o3x"]

[node name="TrainerCard" type="Control"]
layout_mode = 3
anchor_right = 0.386
anchor_bottom = 0.5
offset_right = 0.119995
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lminl")
card = ExtResource("2_oitn0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="MinimizeButton" parent="VBoxContainer/HBoxContainer" node_paths=PackedStringArray("shrinkNodes", "hideNodes") instance=ExtResource("3_pxlap")]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
shrinkNodes = [NodePath("../../PanelContainer")]
hideNodes = [NodePath("../../PanelContainer/VBoxContainer/Description"), NodePath("../../PanelContainer/VBoxContainer/Other")]

[node name="CloseButton" parent="VBoxContainer/HBoxContainer" instance=ExtResource("35_wu3ls")]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_styles/panel = ExtResource("3_7n7u5")
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme = ExtResource("1_av0ds")

[node name="MainInfromation" type="PanelContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="MainInfromation" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/MainInfromation"]
layout_mode = 2

[node name="Name" type="RichTextLabel" parent="VBoxContainer/PanelContainer/VBoxContainer/MainInfromation/MainInfromation"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Team Magma's Mightyena"
fit_content = true

[node name="Extra" type="RichTextLabel" parent="VBoxContainer/PanelContainer/VBoxContainer/MainInfromation/MainInfromation"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "baby"
fit_content = true

[node name="Art" type="PanelContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Art" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Art"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.992157)
custom_minimum_size = Vector2(189, 114)
layout_mode = 2
texture = ExtResource("3_ociyq")
expand_mode = 5
stretch_mode = 5

[node name="Description" type="MarginContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="EffectBox" type="PanelContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/Description"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/Description/EffectBox"]
layout_mode = 2

[node name="ClassText" type="RichTextLabel" parent="VBoxContainer/PanelContainer/VBoxContainer/Description/EffectBox/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "Illustrator:"
fit_content = true

[node name="Effect" type="RichTextLabel" parent="VBoxContainer/PanelContainer/VBoxContainer/Description/EffectBox/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "Illustrator:"
fit_content = true

[node name="Other" type="MarginContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/Other"]
layout_mode = 2

[node name="OtherProperties" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 2

[node name="Illustrator" type="RichTextLabel" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
fit_content = true

[node name="Number" type="RichTextLabel" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_vertical = 8
text = "100/100"
fit_content = true

[node name="Rarity" type="TabContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxEmpty_wt4wi")
current_tab = 0
tabs_visible = false
metadata/_edit_group_ = true

[node name="Common" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Rarity"]
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("5_yaayd")
expand_mode = 2
stretch_mode = 5
metadata/_tab_index = 0

[node name="Uncommon" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Rarity"]
visible = false
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("6_f4r3p")
expand_mode = 2
stretch_mode = 5
metadata/_tab_index = 1

[node name="Rare" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Rarity"]
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("7_qik87")
expand_mode = 2
stretch_mode = 5
metadata/_tab_index = 2

[node name="Holo Rare" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Rarity"]
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("8_u12sb")
expand_mode = 3
stretch_mode = 5
metadata/_tab_index = 3

[node name="ex Rare" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Rarity"]
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("9_vn6na")
expand_mode = 3
stretch_mode = 5
metadata/_tab_index = 4

[node name="Secret Rare" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Rarity"]
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("10_jpopr")
expand_mode = 3
stretch_mode = 5
metadata/_tab_index = 5

[node name="Ultra Rare" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Rarity"]
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("11_e61x5")
expand_mode = 3
stretch_mode = 5
metadata/_tab_index = 6

[node name="Promo" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Rarity"]
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("12_piynd")
expand_mode = 3
stretch_mode = 5
metadata/_tab_index = 7

[node name="Set" type="TabContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxEmpty_x7o3x")
current_tab = 0
tabs_visible = false
metadata/_edit_group_ = true

[node name="RS" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("13_3jmdf")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 0

[node name="SS" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("14_q8b0r")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 1

[node name="DR" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("15_n8p0g")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 2

[node name="MA" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("16_hbgt4")
expand_mode = 3
stretch_mode = 5
metadata/_tab_index = 3

[node name="HL" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("17_6twhk")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 4

[node name="RG" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("18_c1dqk")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 5

[node name="TRR" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("19_y7gsm")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 6

[node name="DX" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("20_50o07")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 7

[node name="EM" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("21_n3una")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 8

[node name="UF" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("22_4npv2")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 9

[node name="DS" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("23_wtdfa")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 10

[node name="LM" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("24_tavhl")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 11

[node name="HP" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("25_7ugkt")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 12

[node name="CG" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("26_ssk8o")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 13

[node name="DF" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("27_2id1v")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 14

[node name="PK" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("28_onnp8")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 15

[node name="POP1" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("29_rq2u4")
expand_mode = 2
stretch_mode = 5
metadata/_tab_index = 16

[node name="POP2" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("30_eqvsb")
expand_mode = 2
stretch_mode = 5
metadata/_tab_index = 17

[node name="POP3" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("31_4hilf")
expand_mode = 2
stretch_mode = 5
metadata/_tab_index = 18

[node name="POP4" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("32_w7flp")
expand_mode = 2
stretch_mode = 5
metadata/_tab_index = 19

[node name="POP5" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("33_26wna")
expand_mode = 2
stretch_mode = 5
metadata/_tab_index = 20

[node name="Empty" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 21

[node name="Movable" parent="VBoxContainer/PanelContainer" node_paths=PackedStringArray("dragging_node", "based_on") instance=ExtResource("35_7n7u5")]
unique_name_in_owner = true
layout_mode = 2
dragging_node = NodePath("../../..")
based_on = NodePath("..")

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
